[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fases/Jogo/Jogo.gd" type="Script" id=1]
[ext_resource path="res://SpawnAnimal/SpawnAnimal.tscn" type="PackedScene" id=2]
[ext_resource path="res://MaquinaFotografica/MaquinaFotografica.tscn" type="PackedScene" id=3]
[ext_resource path="res://Interface/InterfaceJogo/InterfaceJogo.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/fundo.jpg" type="Texture" id=5]
[ext_resource path="res://Assets/som-fundo.mp3" type="AudioStream" id=6]

[sub_resource type="World" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 591, 195.5 )

[node name="Jogo" type="Node"]
script = ExtResource( 1 )

[node name="ViewportJogo" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="MundoJogo" type="Viewport" parent="ViewportJogo"]
size = Vector2( 2480, 1200 )
world = SubResource( 1 )
handle_input_locally = false
render_target_update_mode = 3
audio_listener_enable_2d = true

[node name="Sprite" type="Sprite" parent="ViewportJogo/MundoJogo"]
position = Vector2( 640, 350 )
scale = Vector2( 0.43, 0.37 )
texture = ExtResource( 5 )

[node name="MaquinaFotografica" parent="ViewportJogo/MundoJogo" instance=ExtResource( 3 )]
tamanho_foto = Vector2( 150, 90 )

[node name="SpawnAnimal" parent="ViewportJogo/MundoJogo" instance=ExtResource( 2 )]
position = Vector2( 600, 350 )
animais_spawnaveis = [ 0, 1, 2, 3, 5, 8, 10, 11, 12, 13, 15, 16, 17 ]
min_max_tempo_spawn = Vector2( 2, 10 )
min_max_tempo_desaparecer = Vector2( 1, 4 )
min_max_spawn_por_rodada = Vector2( 1, 3 )

[node name="CollisionShape2D" parent="ViewportJogo/MundoJogo/SpawnAnimal" index="0"]
position = Vector2( 34, 134.5 )
shape = SubResource( 2 )

[node name="Interface" parent="." instance=ExtResource( 4 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[node name="SomFundo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true

[connection signal="fitas_restantes_atualizada" from="." to="Interface/FitasRestantes" method="atualizar_fitas_restantes"]
[connection signal="foto_tirada" from="ViewportJogo/MundoJogo/MaquinaFotografica" to="." method="_on_MaquinaFotogrfica_foto_tirada"]
[connection signal="foto_tirada" from="ViewportJogo/MundoJogo/MaquinaFotografica" to="Interface/Flash" method="_on_MaquinaFotogrfica_foto_tirada"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="ViewportJogo/MundoJogo/SpawnAnimal"]
[editable path="Interface"]
